# Whatify

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/cinematic-ui/: next.config.ts  package.json  tailwind.config.ts
apps/cinematic-ui/app/: globals.css  layout.tsx  page.tsx
apps/console/: package.json  tailwind.config.ts
apps/console/app/: globals.css  layout.tsx  page.tsx
docs/: adk-integration.md  architecture-diagram.md  architecture.md  demo-script-4min.md  deploy-cloud-run.md  submission-checklist.md
docs/proofs/: cloud-proof-20260304T175330Z.md  cloud-proof-latest.md  live-ws-smoke-20260304T185139Z.json  live-ws-smoke-20260304T220023Z.json
docs/proofs/20260304T183744Z/: start-session.json  workers-health.json
docs/proofs/20260304T184651Z/: cloud-proof.md  compare-interrupt.json  interleaved-beat-start.json  interleaved-compare.json  orchestrator-health.json  start-session.json  state.json  timeline.json
schemas/json/: asset-job.schema.json  beat-spec.schema.json  event.schema.json  explain-response.schema.json  memory-write.schema.json  ui-action.schema.json
services/agents/: README.md  pyproject.toml
services/agents/whatif_agents/: __init__.py  runtime.py
services/orchestrator/: Dockerfile  cloudrun.yaml  pyproject.toml
services/orchestrator/app/: __init__.py  main.py
services/orchestrator/app/api/: routes.py
services/orchestrator/app/core/: agent_runtime.py  historian_grounding.py  orchestrator.py  schema_gatekeeper.py  state_machine.py  working_memory.py
services/orchestrator/app/live/: __init__.py  director.py
services/orchestrator/app/models/: contracts.py  enums.py  state.py
services/orchestrator/app/queue/: __init__.py  dispatcher.py
services/orchestrator/app/storage/: gcp_repo.py  memory_repo.py  repository.py
services/orchestrator/app/streams/: action_bus.py  caption_bus.py
services/orchestrator/app/utils/: id.py
services/orchestrator/tests/: conftest.py  test_action_ack.py  test_cinematic_prompting.py  test_dispatcher_fallback.py  test_gcp_infra_integration.py  test_historian_grounding.py  test_integration_loop.py  test_interleaved_compliance.py  test_interleaved_parser.py  test_live_pipeline_regressions.py  test_live_signal_routing.py  test_live_snapshot.py  test_memory_summary.py  test_onboarding_flow.py  test_safety.py  test_schema_validation.py  test_state_machine.py  test_story_outline_continuity.py  test_vertex_runtime_integration.py  test_visual_state.py
services/workers/: Dockerfile  cloudrun.yaml  pyproject.toml
services/workers/app/: main.py
